--- a/ModelFit_s2.ipynb
+++ b/ModelFit_s2.ipynb
@@ -2634,7 +2634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2702,7 +2702,7 @@
     "    sRets = np.sum((np.where(_p['ticker'] == -1, \n",
     "                             _p[windows[1]],\n",
     "                             _p[windows[0]])- tc_m)*pAlloc, axis=1).replace(0.0, 1.0)\n",
-    "    eRets = np.sum(_p[windows[0]]*pAlloc, axis=1) \n",
+    "    eRets = np.sum(_p[windows[0]]*pAlloc, axis=1).replace(0.0, 1.0)\n",
     "    bRets = _p[windows[1]].iloc[:,0]\n",
     "    b_test = pd.DataFrame([], columns= ['Ann-Return', \n",
     "                                             'Ann-Vol',  \n",
@@ -2739,7 +2739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 375,
    "metadata": {
     "scrolled": true
    },
@@ -2828,7 +2828,7 @@
        "2015-05-29    1   -1    1   -1"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2854,7 +2854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [
     {
@@ -2900,7 +2900,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ann-Alpha-Eq</th>\n",
-       "      <td>110.090</td>\n",
+       "      <td>2.720</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TE-Bench</th>\n",
@@ -2908,7 +2908,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TE-EQwtd</th>\n",
-       "      <td>46.339</td>\n",
+       "      <td>3.682</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>IR-SPY</th>\n",
@@ -2916,7 +2916,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>IR-EQ</th>\n",
-       "      <td>2.376</td>\n",
+       "      <td>0.739</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TestYears</th>\n",
@@ -2931,533 +2931,27 @@
        "</div>"
       ],
       "text/plain": [
-       "                   strat\n",
-       "Ann-Return        10.090\n",
-       "Ann-Vol            8.000\n",
-       "Sharpe             1.261\n",
-       "Ann-Alpha-Bench   -0.540\n",
-       "Ann-Alpha-Eq     110.090\n",
-       "TE-Bench           8.807\n",
-       "TE-EQwtd          46.339\n",
-       "IR-SPY            -0.061\n",
-       "IR-EQ              2.376\n",
-       "TestYears          4.670\n",
-       "TCost             10.000"
+       "                  strat\n",
+       "Ann-Return       10.090\n",
+       "Ann-Vol           8.000\n",
+       "Sharpe            1.261\n",
+       "Ann-Alpha-Bench  -0.540\n",
+       "Ann-Alpha-Eq      2.720\n",
+       "TE-Bench          8.807\n",
+       "TE-EQwtd          3.682\n",
+       "IR-SPY           -0.061\n",
+       "IR-EQ             0.739\n",
+       "TestYears         4.670\n",
+       "TCost            10.000"
       ]
      },
-     "execution_count": 371,
+     "execution_count": 376,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "wf_sRet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 372,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TLT</th>\n",
-       "      <th>XLP</th>\n",
-       "      <th>XLU</th>\n",
-       "      <th>XLV</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>period.1</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2015-01-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-02-27</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-03-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-04-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-05-29</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-07-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-08-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-09-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-10-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-11-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-12-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-01-29</th>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-02-29</th>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-03-31</th>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-04-29</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-05-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-06-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-07-29</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-08-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-09-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-10-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-11-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-12-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-01-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-02-28</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-03-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-28</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-05-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-06-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-07-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-08-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-09-29</th>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-10-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-11-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-12-29</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-01-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-02-28</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-03-29</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-04-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-05-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-06-29</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-07-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-08-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-09-28</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-10-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-11-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-01-31</th>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-02-28</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-03-29</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-05-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-06-28</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-07-31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-08-19</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            TLT  XLP  XLU  XLV\n",
-       "period.1                      \n",
-       "2015-01-30    1   -1    1   -1\n",
-       "2015-02-27    1   -1    1   -1\n",
-       "2015-03-31    1   -1    1   -1\n",
-       "2015-04-30    1   -1    1   -1\n",
-       "2015-05-29    1   -1    1   -1\n",
-       "2015-06-30    1   -1    1   -1\n",
-       "2015-07-31    1   -1    1   -1\n",
-       "2015-08-31    1   -1    1   -1\n",
-       "2015-09-30    1   -1    1   -1\n",
-       "2015-10-30    1   -1    1   -1\n",
-       "2015-11-30    1   -1    1   -1\n",
-       "2015-12-31    1   -1    1   -1\n",
-       "2016-01-29   -1   -1   -1   -1\n",
-       "2016-02-29   -1   -1   -1   -1\n",
-       "2016-03-31   -1   -1   -1   -1\n",
-       "2016-04-29    1   -1   -1   -1\n",
-       "2016-05-31    1   -1   -1   -1\n",
-       "2016-06-30    1   -1    1   -1\n",
-       "2016-07-29    1   -1   -1   -1\n",
-       "2016-08-31    1   -1    1   -1\n",
-       "2016-09-30    1   -1    1   -1\n",
-       "2016-10-31    1   -1    1   -1\n",
-       "2016-11-30    1   -1    1   -1\n",
-       "2016-12-30    1    1    1    1\n",
-       "2017-01-31    1    1    1    1\n",
-       "2017-02-28    1    1    1    1\n",
-       "2017-03-31    1   -1    1   -1\n",
-       "2017-04-28    1   -1    1   -1\n",
-       "2017-05-31    1   -1    1   -1\n",
-       "2017-06-30    1   -1    1   -1\n",
-       "2017-07-31    1   -1    1   -1\n",
-       "2017-08-31    1   -1    1   -1\n",
-       "2017-09-29   -1   -1   -1   -1\n",
-       "2017-10-31    1    1    1   -1\n",
-       "2017-11-30    1    1    1   -1\n",
-       "2017-12-29    1    1    1    1\n",
-       "2018-01-31    1    1    1    1\n",
-       "2018-02-28    1    1    1   -1\n",
-       "2018-03-29    1    1    1    1\n",
-       "2018-04-30    1    1    1    1\n",
-       "2018-05-31    1    1    1    1\n",
-       "2018-06-29    1    1    1    1\n",
-       "2018-07-31    1    1    1   -1\n",
-       "2018-08-31    1    1    1   -1\n",
-       "2018-09-28    1    1    1   -1\n",
-       "2018-10-31    1    1    1   -1\n",
-       "2018-11-30    1   -1    1   -1\n",
-       "2018-12-31    1   -1   -1   -1\n",
-       "2019-01-31   -1    1    1   -1\n",
-       "2019-02-28    1    1    1   -1\n",
-       "2019-03-29    1    1    1   -1\n",
-       "2019-04-30    1    1    1    1\n",
-       "2019-05-31    1    1    1    1\n",
-       "2019-06-28    1    1    1    1\n",
-       "2019-07-31    1    1    1    1\n",
-       "2019-08-19    1    1    1   -1"
-      ]
-     },
-     "execution_count": 372,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wf_pred['ticker']"
    ]
   },
   {
